fixed horizontal scrolling

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -73,9 +73,9 @@
 }
 
 .content {
-  width: 1000px;
+  width: 100%;
   max-width: 1000px;
-  margin: 0;
+  margin: 0 auto;
   padding: 20px 40px 20px 20px; /* top right bottom left */
   box-sizing: border-box;
   font-size: 1.2em;
